# ussplitter

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yaml  release.yaml
scripts/: pyside_uic.py  write_version.py
src/usdb_addon/: ussplitter.py  ussplitter.txt
src/ussplitter/: __init__.py  backend.py  consts.py  logger.py  net.py  py.typed  server.py  settings.py  ussplitter.py  utils.py  version.py
src/ussplitter/forms/: Settings.py  Settings.ui
src/ussplitter_server/: server.py
