[project]
name = "ussplitter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "LGPL-3.0-or-later"
requires-python = "~=3.12"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/ussplitter"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
usdb-syncer = { git = "https://github.com/bohning/usdb_syncer" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[dependency-groups]
dev = [
    "usdb-syncer",
    "ruff>=0.9.3",
    "mypy>=1.14.1",
    "pip>=25.0",
    "types-requests>=2.32.0.20241016",
    "types-pyyaml>=6.0.12.20241230",
    "types-setuptools>=75.8.0.20250110",
    "types-tabulate>=0.9.0.20241207",
    "types-tqdm>=4.67.0.20241221",
    "types-colorama>=0.4.15.20240311",
]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["appdirs.*", "usdb_syncer.*"]
follow_untyped_imports = true
